--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ header h1{font-size:1.5rem;line-height:2em;text-align:center;padding:0;height:2e
 <script>
 var ifr,navlinks=[null,"home.html","despacito.html","about.html"];
 function nav(el){
-if(el.tagName=="button")return window.location.href=el.innerHTML.toLowerCase().replace(/\s/g,"-")+".html";
+if(el.tagName.toLowerCase()=="button")return window.location.href=el.innerHTML.toLowerCase().replace(/\s/g,"-")+".html";
 var indx=Array.from(el.parentElement.children).indexOf(el);
 if(el.tagName.toLowerCase()=="li"&&navlinks.length>indx&&navlinks[indx]!=null)window.location.href=navlinks[indx];
 }
