--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@ p{white-space:pre-wrap;width:100vmin;padding-bottom:.5em;}
 header{position:-webkit-sticky;position:sticky;top:-3em;z-index:99999;padding:0;width:100%;height:5.5em;background-color:white;opacity:.75;}
 header h1{font-size:1.5rem;line-height:2em;text-align:center;padding:0;height:2em;z-index:150;}
 </style>
-<script>
-window.onload=()=>setTimeout(()=>document.body.removeAttribute("style"),500);
-</script>
+<script>window.onload=()=>setTimeout(()=>document.body.removeAttribute("style"),250);</script>
 </head>
 <body style="opacity:0;pointer-events:none;">
 <header onclick="if(['button','li'].includes(event.target.tagName.toLowerCase())&&event.target.id!="navbackbtn")window.location.href=event.target.innerHTML.toLowerCase().replace(/\s/g,'-')+'.html';">
