--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ header h1{font-size:1.5rem;line-height:2em;text-align:center;padding:0;height:2e
 <script>window.onload=()=>setTimeout(()=>document.body.removeAttribute("style"),250);</script>
 </head>
 <body style="opacity:0;pointer-events:none;">
-<header onclick="if(['button','li'].includes(event.target.tagName.toLowerCase())&&event.target.id!="navbackbtn")window.location.href=event.target.innerHTML.toLowerCase().replace(/\s/g,'-')+'.html';">
+<header onclick="if(['button','li'].includes(event.target.tagName.toLowerCase())&&event.target.id!='navbackbtn')window.location.href=event.target.innerHTML.toLowerCase().replace(/\s/g,'-')+'.html';">
 <h1>aids</h1>
 <button id="navbtn">&equiv;</button>
 <button>Home</button>
