--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ header h1{font-size:1.5rem;line-height:2em;text-align:center;padding:0;height:2e
 </head>
 <body style="opacity:0;pointer-events:none;">
 <header onclick="if(['button','li'].includes(event.target.tagName.toLowerCase())&&event.target.id!='navbackbtn')window.location.href=event.target.innerHTML.toLowerCase().replace(/\s/g,'-')+'.html';">
-<h1>aids</h1>
+<h1>99percentcss</h1>
 <button id="navbtn">&equiv;</button>
 <button>Home</button>
 <button>Despacito</button>
