--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ header button:hover{box-shadow:0 0 .625em #888;}
 #navmenu li{color:lightgray;cursor:pointer;padding:calc(11em / 18);margin:0;font-size:1.125em;line-height:1em;}
 #navmenu li:hover{color:white;background-color:darkgray;}
 body{background-color:lightgray;z-index:2;min-height:100vh;}
-html{background:url(http://id0t.x10.mx/dl/IMG_1497.GIF) no-repeat center center,lightgray;background-size:5em;height:100vh;z-index:1;}
+html{background:url(spinload.gif) no-repeat center center,lightgray;background-size:5em;height:100vh;z-index:1;}
 content{z-index:60;padding:.5em;width:calc(100% - 1em);min-height:calc(100% - 2.5em);position:absolute;top:4.5em;left:0;right:0;bottom:0;}
 p{white-space:pre-wrap;width:100vmin;padding-bottom:.5em;}
 header{position:-webkit-sticky;position:sticky;top:-3em;z-index:99999;padding:0;width:100%;height:5.5em;background-color:white;opacity:.75;}
