--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ header h1{font-size:1.5rem;line-height:2em;text-align:center;padding:0;height:2e
 </style>
 <script>window.onload=()=>setTimeout(()=>document.body.removeAttribute("style"),250);</script>
 </head>
-<body style="opacity:0;pointer-events:none;" ontouchstart onmousedown>
+<body style="opacity:0;pointer-events:none;overflow-y:hidden;" ontouchstart onmousedown>
 <header onclick="if(['button','li'].includes(event.target.tagName.toLowerCase())&&!['navbackbtn','navbtn'].includes(event.target.id))window.location.href=event.target.innerHTML.toLowerCase().replace(/\s/g,'-')+'.html';">
 <h1>99percentcss</h1>
 <button id="navbtn" ontouchstart="this.focus();">&equiv;</button>
