--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ button:hover{transform:scale(1.25,1.25);}
 header button{box-shadow:0 0 .5em #888;margin:.5em;height:2em;font-weight:bold;cursor:pointer;background-color:white;border-radius:1em;outline:0!important;}
 #navbtn{z-index:10000;width:2em;}
 header button:active{box-shadow:0 0 .4375em #888;transform:scale(.875,.875);}
-#navbtn:focus,#navbtn:active{opacity:0;transform:translateX(calc(-100% - 1em));}
+#navbtn:focus{opacity:0;transform:translateX(calc(-100% - 1em));}
 header button:not(#navbtn){padding:0 .5em;}
 header button:hover{box-shadow:0 0 .625em #888;}
-#navbtn:focus ~ #navmenu,#navbtn:active ~ #navmenu{transform:translateX(0);opacity:1;}
+#navbtn:focus ~ #navmenu{transform:translateX(0);opacity:1;}
 #navmenu{transform:translateX(-100%);opacity:0;display:block;position:-webkit-sticky;position:relative;top:-2.5em;height:100vh;width:75vmin;background-color:gray;z-index:9999;padding:0;margin:0;}
 #navmenu li{color:lightgray;cursor:pointer;padding:calc(11em / 18);margin:0;font-size:1.125em;line-height:1em;}
 #navmenu li:hover{color:white;background-color:darkgray;}
@@ -28,7 +28,7 @@ header h1{font-size:1.5rem;line-height:2em;text-align:center;padding:0;height:2e
 <body style="opacity:0;pointer-events:none;overflow:hidden;" ontouchstart onmousedown>
 <header onclick="if(['button','li'].includes(event.target.tagName.toLowerCase())&&!['navbackbtn','navbtn'].includes(event.target.id))window.location.href=event.target.innerHTML.toLowerCase().replace(/\s/g,'-')+'.html';">
 <h1>99percentcss</h1>
-<button id="navbtn" ontouchstart="this.focus();">&equiv;</button>
+<button id="navbtn" onclick="this.focus();">&equiv;</button>
 <button>Home</button>
 <button>Despacito</button>
 <button>About</button>
