--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ header button:hover{box-shadow:0 0 .625em #888;}
 #navmenu{transform:translateX(-100%);opacity:0;display:block;position:-webkit-sticky;position:relative;top:-2.5em;height:100vh;width:75vmin;background-color:gray;z-index:9999;padding:0;margin:0;}
 #navmenu li{color:lightgray;cursor:pointer;padding:calc(11em / 18);margin:0;font-size:1.125em;line-height:1em;}
 #navmenu li:hover{color:white;background-color:darkgray;}
-body{background-color:lightgray;z-index:2;min-height:100vh;}
+body{background-color:lightgray;z-index:2;min-height:100vh;height:100%;}
 html{background:url(spinload.gif) no-repeat center center,lightgray;background-size:5em;height:100vh;z-index:1;}
 content{z-index:60;padding:.5em;width:calc(100% - 1em);min-height:calc(100% - 2.5em);position:absolute;top:4.5em;left:0;right:0;bottom:0;}
 p{white-space:pre-wrap;width:calc(100vmin - 1em);padding-bottom:.5em;}
